--- a/index.html
+++ b/index.html
@@ -120,6 +120,48 @@
     </div>
 
     </section>
+
+    <!-- Projetos Section Code -->
+
+    <section class="projetos" id="projetos">
+
+        <h2 class="section-titulo">Recente Projetos</h2>
+
+        <div class="projeto-grid">
+
+            <div class="projeto-card">
+              <img class="imgproj1" src="img/proj1.png" alt="">  
+              <h3>LuckPet</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure id laboriosam facere assumenda numquam ipsam facilis suscipit.</p>
+            <div class="btn-grupo">  
+                <div class="btn">Live Demo</div>
+                <div class="btn">GitHub Code</div>
+            </div>
+        </div>
+
+        <div class="projeto-card">
+            <img class="imgproj2" src="img/proj2.png" alt="">  
+            <h3>Gastos Mensais</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure id laboriosam facere assumenda numquam ipsam facilis suscipit.</p>
+          <div class="btn-grupo">
+              <div class="btn">Live Demo</div>
+              <div class="btn">GitHub Code</div>
+          </div>
+      </div>
+
+      <div class="projeto-card">
+        <img class="imgproj3" src="img/proj3.png" alt="">  
+        <h3>Login Page</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure id laboriosam facere assumenda numquam ipsam facilis suscipit.</p>
+      <div class="btn-grupo">
+          <div class="btn">Live Demo</div>
+          <div class="btn">GitHub Code</div>
+      </div>
+  </div>
+
+  </div>
+
+    </section>
     
 </body>
 </html>
