--- a/index.html
+++ b/index.html
@@ -158,10 +158,50 @@
           <div class="btn">GitHub Code</div>
       </div>
   </div>
-
-  </div>
+</div>
 
     </section>
+
+    <!-- Contato Section Code -->
+
+    <section class="contato" id="contato">
+        
+        <div class="input-box">
+            <h2 class="section-titulo">Meu Contato</h2>
+
+            <div class="input">
+                <input type="text" placeholder="Pablooliver853@gmail.com">
+                <i class="fa-solid fa-envelope"></i>
+            </div>
+
+            <div class="btn">Enviar</div>
+
+        </div>
+
+    </section>
+
+    <!-- Footer Section Code -->
+
+    <footer>
+
+        <ul>
+            <li>
+                <a href="#sobre">Sobre</a>
+            </li>
+            <li>
+                <a href="#experiencia">Experiência</a>
+            </li>
+            <li>
+                <a href="#projetos">Projetos</a>
+            </li>
+            <li>
+                <a href="#contato">Contato</a>
+            </li>
+        </ul>
+
+        <p class="copyright">&copy; Todos Os Direitos Reservados | Pablo Gomes</p>
+
+    </footer>
     
 </body>
 </html>
