--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="text"> 
                 <h3>Olá, Bem Vindo</h3>
                 <h1>Pablo Gomes</h1>
-                <span class="texto-multiplo">Backend Desenvolvedor</span>
+                <span class="texto-multiplo"></span>
             </div>
 
             <div class="btn-grupo">
@@ -202,6 +202,9 @@
         <p class="copyright">&copy; Todos Os Direitos Reservados | Pablo Gomes</p>
 
     </footer>
+
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script src="script.js"></script>
     
 </body>
 </html>
