--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/avatar-de-favicon.png" type="image/x-icon">
     <title>Pablo Gomes - Portfolio Website</title>
 </head>
 <body>
@@ -32,7 +33,7 @@
 
         <i class="fa-solid fa-bars" id="menu-icon"></i>
 
-        <button class="visitar-btn">Visitar GitHub</button>
+        <button class="visitar-btn"><a href="https://github.com/PabloG-7"><span style="color: white;">Visitar GitHub</span></a></button>
 
     </header>
 
@@ -47,7 +48,7 @@
             <div class="info-box">
 
             <div class="text"> 
-                <h3>Olá, Bem Vindo</h3>
+                <h3>Olá, Bem Vindo(a)</h3>
                 <h1>Pablo Gomes</h1>
                 <span class="texto-multiplo"></span>
             </div>
@@ -61,8 +62,9 @@
 
             <div class="sociais">
 
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-github"></i>
+                <a href="https://www.linkedin.com/in/pablogomess/"><i class="fa-brands fa-linkedin"></i></a>
+                
+                <a href="https://github.com/PabloG-7"><i class="fa-brands fa-github"></i></a>
 
             </div>
         </div>
