--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
 
             <div class="btn-grupo">
 
-                <div class="btn">Download Cv</div>
-                <div class="btn">Contato</div>
+                <a href="Curriculo-Pablo2025.pdf" download="Curriculo-Pablo2025">
+                    <div class="btn">Download Cv</div>
+                </a>
+
 
             </div>
 
@@ -134,7 +136,7 @@
             <div class="projeto-card">
               <img class="imgproj1" src="img/proj1.png" alt="">  
               <h3>LuckPet</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure id laboriosam facere assumenda numquam ipsam facilis suscipit.</p>
+              <p>✅ LuckPet é uma plataforma online criada para petshops, com uma interface moderna e fácil de navegar, permitindo aos usuários comprar produtos para seus pets com agilidade e praticidade.</p>
             <div class="btn-grupo">  
                 <div class="btn">Live Demo</div>
                 <div class="btn">GitHub Code</div>
@@ -144,7 +146,7 @@
         <div class="projeto-card">
             <img class="imgproj2" src="img/proj2.png" alt="">  
             <h3>Gastos Mensais</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure id laboriosam facere assumenda numquam ipsam facilis suscipit.</p>
+            <p>✅ Este é um projeto simples de controle de custos pessoais, criado como uma forma de aprimorar minhas habilidades em desenvolvimento front-end e manipulação de DOM com JavaScript.</p>
           <div class="btn-grupo">
               <div class="btn">Live Demo</div>
               <div class="btn">GitHub Code</div>
@@ -154,7 +156,7 @@
       <div class="projeto-card">
         <img class="imgproj3" src="img/proj3.png" alt="">  
         <h3>Login Page</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure id laboriosam facere assumenda numquam ipsam facilis suscipit.</p>
+        <p>✅ Este é um projeto de uma página de login simples, desenvolvido com HTML e CSS. O design é responsivo, garantindo que o site funcione bem em dispositivos de diferentes tamanhos de tela.</p>
       <div class="btn-grupo">
           <div class="btn">Live Demo</div>
           <div class="btn">GitHub Code</div>
