--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <section class="projetos" id="projetos">
 
-        <h2 class="section-titulo">Recente Projetos</h2>
+        <h2 class="section-titulo">Projetos Recentes</h2>
 
         <div class="projeto-grid">
 
@@ -137,9 +137,12 @@
               <img class="imgproj1" src="img/proj1.png" alt="">  
               <h3>LuckPet</h3>
               <p>✅ LuckPet é uma plataforma online criada para petshops, com uma interface moderna e fácil de navegar, permitindo aos usuários comprar produtos para seus pets com agilidade e praticidade.</p>
+
             <div class="btn-grupo">  
-                <div class="btn">Live Demo</div>
-                <div class="btn">GitHub Code</div>
+
+                <div class="btn"><a href="https://pablog-7.github.io/projeto-luckpet/">Live Demo</a></div>
+
+                <div class="btn"><a href="https://github.com/PabloG-7/projeto-luckpet?tab=readme-ov-file">GitHub Code</a></div>
             </div>
         </div>
 
@@ -147,9 +150,12 @@
             <img class="imgproj2" src="img/proj2.png" alt="">  
             <h3>Gastos Mensais</h3>
             <p>✅ Este é um projeto simples de controle de custos pessoais, criado como uma forma de aprimorar minhas habilidades em desenvolvimento front-end e manipulação de DOM com JavaScript.</p>
+
           <div class="btn-grupo">
-              <div class="btn">Live Demo</div>
-              <div class="btn">GitHub Code</div>
+
+              <div class="btn"><a href="https://pablog-7.github.io/Gastos-Mensais/">Live Demo</a></div>
+
+              <div class="btn"><a href="https://github.com/PabloG-7/Gastos-Mensais?tab=readme-ov-file">GitHub Code</a></div>
           </div>
       </div>
 
@@ -157,9 +163,12 @@
         <img class="imgproj3" src="img/proj3.png" alt="">  
         <h3>Login Page</h3>
         <p>✅ Este é um projeto de uma página de login simples, desenvolvido com HTML e CSS. O design é responsivo, garantindo que o site funcione bem em dispositivos de diferentes tamanhos de tela.</p>
+
       <div class="btn-grupo">
-          <div class="btn">Live Demo</div>
-          <div class="btn">GitHub Code</div>
+
+          <div class="btn"><a href="https://pablog-7.github.io/projeto-login/">Live Demo</a></div>
+
+          <div class="btn"><a href="https://github.com/PabloG-7/projeto-login?tab=readme-ov-file">GitHub Code</a></div>
       </div>
   </div>
 </div>
