--- a/index.html
+++ b/index.html
@@ -86,34 +86,34 @@
             <div class="grid-card">
 
                 <i class="fa-solid fa-file-code"></i>
-                <span>Frontend Desenvolvedor</span>
-                <h3>1 Ano</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam impedit architecto eos quo minus! Odio, aspernatur delectus.</p>
+                <span>Frontend Desenvolvedor</span><br>
+                <h3>6 Meses</h3><br>
+                <p>Criação de interfaces interativas e responsivas com HTML, CSS e JavaScript. Desenvolvimento de layouts modernos, acessíveis e adaptáveis para diferentes dispositivos.</p>
             </div>
      
 
         <div class="grid-card">
 
             <i class="fa-solid fa-code"></i>
-            <span>Backend Desenvolvedor</span>
-            <h3>1 Ano</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam impedit architecto eos quo minus! Odio, aspernatur delectus.</p>
+            <span>Backend Desenvolvedor</span><br>
+            <h3>6 Meses</h3><br>
+            <p>Construção de APIs RESTful usando Node.js e Express. Integração com MySQL para gerenciamento de dados de forma segura e eficiente.</p>
         </div>
 
         <div class="grid-card">
 
             <i class="fa-brands fa-git-alt"></i>
-            <span>Versionamento de Código</span>
-            <h3>1 Ano</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam impedit architecto eos quo minus! Odio, aspernatur delectus.</p>
+            <span>Versionamento de Código</span><br>
+            <h3>6 Meses</h3><br>
+            <p>Experiência com Git e GitHub, utilizando boas práticas de versionamento, colaboração em equipe e deploys organizados.</p>
         </div>
 
         <div class="grid-card">
 
             <i class="fa-solid fa-laptop"></i>
-            <span>Full Stack Desenvolvedor</span>
-            <h3>Em Transição</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam impedit architecto eos quo minus! Odio, aspernatur delectus.</p>
+            <span>Full Stack Desenvolvedor</span><br>
+            <h3>Em Transição</h3><br>
+            <p>Aprendendo a unir frontend e backend para desenvolver aplicações completas. Explorando novas tecnologias para aprimorar habilidades e otimizar processos.</p>
         </div>
         
 
@@ -161,14 +161,14 @@
 
       <div class="projeto-card">
         <img class="imgproj3" src="img/proj3.png" alt="">  
-        <h3>Login Page</h3>
-        <p>✅ Este é um projeto de uma página de login simples, desenvolvido com HTML e CSS. O design é responsivo, garantindo que o site funcione bem em dispositivos de diferentes tamanhos de tela.</p>
+        <h3>UserFlow</h3>
+        <p>✅ Desenvolvi o UserFlow, um backend em Node.js com MySQL que permite cadastrar e listar usuários via API RESTful. Utilizei Express, Dotenv e Cors para otimizar a aplicação.</p>
 
       <div class="btn-grupo">
 
-          <div class="btn"><a href="https://pablog-7.github.io/projeto-login/">Live Demo</a></div>
+          <div class="btn"><a href="http://localhost:3000/api/users">Live Demo</a></div>
 
-          <div class="btn"><a href="https://github.com/PabloG-7/projeto-login?tab=readme-ov-file">GitHub Code</a></div>
+          <div class="btn"><a href="https://github.com/PabloG-7/userflow-backend">GitHub Code</a></div>
       </div>
   </div>
 </div>
