--- a/index.html
+++ b/index.html
@@ -171,26 +171,32 @@
           <div class="btn"><a href="https://github.com/PabloG-7/userflow-backend">GitHub Code</a></div>
       </div>
   </div>
+
+
+  <div class="projeto-card">
+    <img class="imgproj4" src="img/proj4.png" alt="">  
+    <h3>Kushi.</h3>
+    <p>✅ O Kushi é um e-commerce de moda com design clean, responsivo e intuitivo, oferecendo uma navegação fluida e um catálogo bem organizado para a melhor experiência do usuário.</p>
+
+  <div class="btn-grupo">
+
+      <div class="btn"><a href="http://localhost:3000/api/users">Live Demo</a></div>
+
+      <div class="btn"><a href="https://github.com/PabloG-7/userflow-backend">GitHub Code</a></div>
 </div>
 
     </section>
 
     <!-- Contato Section Code -->
-
     <section class="contato" id="contato">
-        
         <div class="input-box">
             <h2 class="section-titulo">Meu Contato</h2>
-
-            <div class="input">
-                <input type="text" placeholder="Pablooliver853@gmail.com">
-                <i class="fa-solid fa-envelope"></i>
-            </div>
-
-            <div class="btn">Enviar</div>
-
+            <form action="https://formspree.io/f/meoezgay" method="POST">
+                <input type="email" name="email" value="Pablooliver853@gmail.com" required><br><br>
+                <textarea class="txt" name="message" placeholder="Digite sua mensagem" required></textarea><br>
+                <button class="txt1" type="submit">Enviar</button>
+            </form>
         </div>
-
     </section>
 
     <!-- Footer Section Code -->
