--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
 
   <div class="btn-grupo">
 
-      <div class="btn"><a href="http://localhost:3000/api/users">Live Demo</a></div>
+      <div class="btn"><a href="https://pablog-7.github.io/projeto-kushi/">Live Demo</a></div>
 
-      <div class="btn"><a href="https://github.com/PabloG-7/userflow-backend">GitHub Code</a></div>
+      <div class="btn"><a href="https://github.com/PabloG-7/projeto-kushi">GitHub Code</a></div>
 </div>
 
     </section>
