--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <i class="fa-solid fa-file-code"></i>
                 <span>Frontend Desenvolvedor</span><br>
                 <h3>6 Meses</h3><br>
-                <p>Criação de interfaces interativas e responsivas com HTML, CSS e JavaScript. Desenvolvimento de layouts modernos, acessíveis e adaptáveis para diferentes dispositivos.</p>
+                <p>- Criação de interfaces interativas e responsivas com HTML, CSS e JavaScript. Desenvolvimento de layouts modernos, acessíveis e adaptáveis para diferentes dispositivos.</p>
             </div>
      
 
@@ -97,7 +97,7 @@
             <i class="fa-solid fa-code"></i>
             <span>Backend Desenvolvedor</span><br>
             <h3>6 Meses</h3><br>
-            <p>Construção de APIs RESTful usando Node.js e Express. Integração com MySQL para gerenciamento de dados de forma segura e eficiente.</p>
+            <p>- Construção de APIs RESTful usando Node.js e Express. Integração com MySQL para gerenciamento de dados de forma segura e eficiente.</p>
         </div>
 
         <div class="grid-card">
@@ -105,7 +105,7 @@
             <i class="fa-brands fa-git-alt"></i>
             <span>Versionamento de Código</span><br>
             <h3>6 Meses</h3><br>
-            <p>Experiência com Git e GitHub, utilizando boas práticas de versionamento, colaboração em equipe e deploys organizados.</p>
+            <p>- Experiência com Git e GitHub, utilizando boas práticas de versionamento, colaboração em equipe e deploys organizados.</p>
         </div>
 
         <div class="grid-card">
@@ -113,7 +113,7 @@
             <i class="fa-solid fa-laptop"></i>
             <span>Full Stack Desenvolvedor</span><br>
             <h3>Em Transição</h3><br>
-            <p>Aprendendo a unir frontend e backend para desenvolver aplicações completas. Explorando novas tecnologias para aprimorar habilidades e otimizar processos.</p>
+            <p>- Aprendendo a unir frontend e backend para desenvolver aplicações completas. Explorando novas tecnologias para aprimorar habilidades e otimizar processos.</p>
         </div>
         
 
@@ -162,7 +162,7 @@
       <div class="projeto-card">
         <img class="imgproj3" src="img/proj3.png" alt="">  
         <h3>UserFlow</h3>
-        <p>✅ Desenvolvi o UserFlow, um backend em Node.js com MySQL que permite cadastrar e listar usuários via API RESTful. Utilizei Express, Dotenv e Cors para otimizar a aplicação.</p>
+        <p>✅ API RESTful com Node.js e MySQL para CRUD de usuários, incluindo cadastro de dados detalhados e validação. Demonstra habilidades em backend e integração com banco de dados.</p>
 
       <div class="btn-grupo">
 
