--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="sobre-container">
 
-            <img src="img/perfil-foto.png" alt=""> 
+            <img src="img/perfil.jpg" alt=""> 
 
             <div class="info-box">
 
