--- a/index.html
+++ b/index.html
@@ -140,22 +140,22 @@
 
             <div class="btn-grupo">  
 
-                <div class="btn"><a href="https://pablog-7.github.io/projeto-luckpet/">Live Demo</a></div>
+                <div class="btn"><a href="https://pablog-7.github.io/ecommerce-luckpet/">Live Demo</a></div>
 
-                <div class="btn"><a href="https://github.com/PabloG-7/projeto-luckpet?tab=readme-ov-file">GitHub Code</a></div>
+                <div class="btn"><a href="https://github.com/PabloG-7/ecommerce-luckpet?tab=readme-ov-file">GitHub Code</a></div>
             </div>
         </div>
 
         <div class="projeto-card">
-            <img class="imgproj2" src="img/proj2.png" alt="">  
+            <img class="imgproj2" src="img/proj2.png" alt="">
             <h3>Gastos Mensais</h3>
             <p>✅ Este é um projeto simples de controle de custos pessoais, criado como uma forma de aprimorar minhas habilidades em desenvolvimento front-end e manipulação de DOM com JavaScript.</p>
 
           <div class="btn-grupo">
 
-              <div class="btn"><a href="https://pablog-7.github.io/Gastos-Mensais/">Live Demo</a></div>
+              <div class="btn"><a href="https://pablog-7.github.io/gastos-mensais/">Live Demo</a></div>
 
-              <div class="btn"><a href="https://github.com/PabloG-7/Gastos-Mensais?tab=readme-ov-file">GitHub Code</a></div>
+              <div class="btn"><a href="https://github.com/PabloG-7/gastos-mensais">GitHub Code</a></div>
           </div>
       </div>
 
@@ -166,7 +166,7 @@
 
       <div class="btn-grupo">
 
-          <div class="btn"><a href="http://localhost:3000/api/users">Live Demo</a></div>
+          <div class="btn"><a href="https://github.com/PabloG-7/userflow-backend">Live Demo</a></div>
 
           <div class="btn"><a href="https://github.com/PabloG-7/userflow-backend">GitHub Code</a></div>
       </div>
@@ -180,9 +180,9 @@
 
   <div class="btn-grupo">
 
-      <div class="btn"><a href="https://pablog-7.github.io/projeto-kushi/">Live Demo</a></div>
+      <div class="btn"><a href="https://pablog-7.github.io/ecommerce-kushi/">Live Demo</a></div>
 
-      <div class="btn"><a href="https://github.com/PabloG-7/projeto-kushi">GitHub Code</a></div>
+      <div class="btn"><a href="https://github.com/PabloG-7/ecommerce-kushi">GitHub Code</a></div>
 </div>
 
     </section>
@@ -192,7 +192,7 @@
         <div class="input-box">
             <h2 class="section-titulo">Meu Contato</h2>
             <form action="https://formspree.io/f/meoezgay" method="POST">
-                <input type="email" name="email" value="Pablooliver853@gmail.com" required><br><br>
+                <input type="email" name="email" value="PabloxxxxxxXXX@gmail.com" required><br><br>
                 <textarea class="txt" name="message" placeholder="Digite sua mensagem" required></textarea><br>
                 <button class="txt1" type="submit">Enviar</button>
             </form>
