update nas imagens

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
 
           <div class="btn-grupo">
 
-              <div class="btn"><a href="https://pablog-7.github.io/gastos-mensais/">Live Demo</a></div>
+              <div class="btn"><a href="https://pablog-7.github.io/controle-de-custos-pessoais/">Live Demo</a></div>
 
-              <div class="btn"><a href="https://github.com/PabloG-7/gastos-mensais">GitHub Code</a></div>
+              <div class="btn"><a href="https://github.com/PabloG-7/controle-de-custos-pessoais/tree/main">GitHub Code</a></div>
           </div>
       </div>
 
