--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <nav>
                 <div class="logo">Pablo Gomes</i></div>
-                <div class="nav-links">
+                <div class="nav-links" id="navLinks">
                     <a href="#home"><i class="fas fa-house"></i> Início</a>
                     <a href="#about"><i class="fas fa-user"></i> Sobre</a>
                     <a href="#skills"><i class="fas fa-code"></i> Habilidades</a>
@@ -21,7 +21,7 @@
                     <a href="#projects"><i class="fas fa-folder-open"></i> Projetos</a>
                     <a href="#contact"><i class="fas fa-envelope"></i> Contato</a>
                 </div>
-                <button class="mobile-menu-btn">
+                <button class="mobile-menu-btn" id="menuBtn">
                     <i class="fas fa-bars"></i>
                 </button>
             </nav>
