--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pablo Gomes | Desenvolvedor Full Stack</title>
+    <title>Pablo Gomes | Portfólio Online</title>
+    <link rel="shortcut icon" href="img/avatar-de-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -35,7 +36,7 @@
                 Pablo Gomes
               </h1>
             <span class="anima-text"></span>
-            <p>Desenvolvedor Full Stack em transição, criando soluções web modernas e responsivas com foco na experiência do usuário.</p>
+            <p>Desenvolvedor Full Stack, criando soluções web modernas e responsivas com foco na experiência do usuário.</p>
             <div class="hero-btns">
                 <a href="#contact" class="btn btn-primary">Contato</a>
                 <a href="Curriculo-Pablo2025.pdf" class="btn btn-outline">Download CV</a>
