--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                     <div class="skill-item">
                         <div class="skill-name">
-                            <span>MySQL</span>
+                            <span>TypeScript</span>
                             <span>65%</span>
                         </div>
                         <div class="skill-bar">
@@ -144,20 +144,20 @@
                     </div>
                     <div class="skill-item">
                         <div class="skill-name">
-                            <span>Responsive Design</span>
-                            <span>90%</span>
+                            <span>Python</span>
+                            <span>45%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" style="width: 90%"></div>
+                            <div class="skill-progress" style="width: 45%"></div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <div class="skill-name">
-                            <span>UI/UX Basics</span>
-                            <span>60%</span>
+                            <span>MySQL</span>
+                            <span>70%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" style="width: 60%"></div>
+                            <div class="skill-progress" style="width: 70%"></div>
                         </div>
                     </div>
                 </div>
@@ -260,16 +260,16 @@
                         <img src="img/proj3.png" alt="Controle de Custos">
                     </div>
                     <div class="project-info">
-                        <h3>UserFlow - (Projeto Pessoal)</h3>
-                        <p>✅ API RESTful com Node.js e MySQL para CRUD de usuários, incluindo cadastro de usuários detalhados e validação.</p>
+                        <h3>Pokedex - (Projeto Pessoal)</h3>
+                        <p>✅ Uma Pokédex interativa construída com React e PokéAPI, com design moderno e responsivo para explorar o mundo Pokémon.</p>
                         <div class="project-tags">
-                            <span class="project-tag">JavaScript</span>
-                            <span class="project-tag">HTML/CSS</span>
-                            <span class="project-tag">Finanças</span>
+                            <span class="project-tag">React</span>
+                            <span class="project-tag">Tailwind CSS</span>
+                            <span class="project-tag">PokéAPI</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/PabloG-7/userflow-backend" class="btn btn-outline">Live Demo</a>
-                            <a href="https://github.com/PabloG-7/userflow-backend" class="btn btn-primary">GitHub Code</a>
+                            <a href="https://pokedex-eight-drab-61.vercel.app/" class="btn btn-outline">Live Demo</a>
+                            <a href="https://github.com/PabloG-7/pokedex" class="btn btn-primary">GitHub Code</a>
                         </div>
                     </div>
                 </div>
